--- a/NodeModule/tsconfig.json
+++ b/NodeModule/tsconfig.json
@@ -1,12 +1,13 @@
 {
     "compilerOptions": {
-        "target": "ES6",
+        "target": "es6",
         "module": "commonjs",
         "outDir": "./dist",
         "rootDir": "./",
         "strict": true,
         "esModuleInterop": true,
         "skipLibCheck": true,
-        "forceConsistentCasingInFileNames": true
+        "forceConsistentCasingInFileNames": true,
+        "allowSyntheticDefaultImports": true
     },
 }
