--- a/NodeModule/package.json
+++ b/NodeModule/package.json
@@ -11,9 +11,13 @@
   "author": "MayankGupta",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^24.3.0",
+    "express": "^5.1.0",
     "randomize": "^0.0.4",
+    "socket.io": "^4.8.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
+  },
+  "devDependencies": {
+    "@types/node": "^24.3.0"
   }
 }
